--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ a:hover{
 }
 .avatar{
   display: flex;
+  position: relative;
   gap: 30px;
-  padding: 20px;
   align-items: center;
 }
 .avatar .avtcart{
@@ -39,9 +39,9 @@ a:hover{
   filter: brightness(0);
 }
 .avatar .avt{
-  width: 35px;
-  height: 35px;
-  border: 3px solid hsl(26, 100%, 55%);
+  width: 33px;
+  height: 33px;
+  border: 2px solid hsl(26, 100%, 55%);
   border-radius: 50%;
 }
 .headline{
@@ -278,13 +278,14 @@ p{
 }
 .cart-count { 
     position: absolute; 
-    top: 22px; 
-    right: 208px; 
+    top: 1px; 
+    right: 65px; 
     background-color: hsl(26, 100%, 55%); 
     color: white; 
     border-radius: 50%; 
     padding: 2px 6px; 
-    font-size: 8px; 
+    font-size: 8px;
+    pointer-events: none; 
 }
 .orange{
   align-items: center;
@@ -316,7 +317,7 @@ p{
    background-color: white;
    z-index: 2;
    left: 0;
-   top: 55px;
+   top: 40px;
    padding: 10px;
    text-align: start;
   }
@@ -349,6 +350,7 @@ p{
     height: 270px;
     object-fit: cover;
     border-radius: 0;
+    margin-top: none;
   }
   .pics{
     display: none;
@@ -396,14 +398,31 @@ p{
   color: hsl(26, 100%, 55%);
 
 }
-.cart-count { 
-    position: absolute; 
-    top: 22px; 
-    right: 105px; 
-    background-color: hsl(26, 100%, 55%); 
-    color: white; 
-    border-radius: 60%; 
-    padding: 2px 6px; 
-    font-size: 8px; 
+.gallery-container{
+  display: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  z-index: auto;
+}
+#gallery-lay{
+  display: none;
+  position: absolute;
+  z-index: auto;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+#gallery{
+  display: none;
+  position: relative;
+  width: 80%;
+  max-width: 800px;
+  margin: 40px auto;
+  text-align: center;
 }
 }
