--- a/style.css
+++ b/style.css
@@ -76,12 +76,11 @@ a:hover{
   height: 50px;
   border-radius: 10px;
   cursor: pointer;
-  border: 2px solid transparent;
-  transition: border 0.3s;
- 
+  transition: 0.3s, ease;
 }
 .pic.active{
   border: 2px solid hsl(26, 100%, 55%);
+  opacity: 0.5;
 }
 .box2 h3{
   color: hsl(219, 9%, 45%);
@@ -322,21 +321,26 @@ p{
   position: relative;
   width: 100%;
   justify-content: space-between;
-  margin-bottom: 10px;
-  z-index: 2;
 }
 .mobile-btn {
   background: white;
-  border: 1px solid hsl(26, 100%, 55%);
-  color: hsl(26, 100%, 55%);
+  border: 1px solid white;
+  color: black;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   font-size: 24px;
   cursor: pointer;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+  box-shadow: 0 2px 8px rgba(0,0,0,0.4);
+ 
 }
 @media (max-width: 768px) {
+  .navbar {
+    margin: 0;
+    width: 100vw;
+    max-width: 100vw;
+    padding: 0 0;
+  }
   .navbar ul{
    display: none;
    height: 800px;
@@ -346,7 +350,7 @@ p{
    background-color: white;
    z-index: 2;
    left: 0;
-   top: 40px;
+   top: 50px;
    padding: 10px;
    text-align: start;
   }
@@ -359,8 +363,9 @@ p{
   }
   
   #harmburger{
-    display: block;
-    cursor: pointer;
+  display: block;
+  cursor: pointer;
+  margin-left: 0;
   }
   #close{
     display: block;
@@ -456,6 +461,7 @@ p{
 }
 .mobile-btns { 
   display: flex;
+   top: 150px;
 }
 #mainpic {
   pointer-events: none;
